--- a/Week-09-Bootstrap/LMS/Assignment/Submission/notes.html
+++ b/Week-09-Bootstrap/LMS/Assignment/Submission/notes.html
@@ -55,22 +55,6 @@
     </div>
     <div class="container-fluid bg-success text-white shadow-sm">
       <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-12">
-            <div class="jumbotron bg-dark m-0">
-              <h1 class="display-4">Thank you!</h1>
-              <p class="lead">
-                Thank you for viewing my Week 09 Coding Assignment... I
-                understand your time is valueable!
-              </p>
-              <hr class="my-4" />
-              <p>Click the button to view my Week 09 Assignment video.</p>
-              <a class="btn btn-info btn-lg" href="index.html" role="button"
-                >Assignment Video</a
-              >
-            </div>
-          </div>
-        </div>
       </div>
     </div>
     <div class="container-fluid bg-success text-white shadow-sm">
@@ -120,9 +104,8 @@
                 ></textarea>
               </div>
               <div class="text-center">
-                <button type="submit" class="btn btn-dark border-warning">
-                  Submit
-                </button>
+
+                <button type="submit" class="btn btn-dark border-warning">Submit</button>
               </div>
             </form>
           </div>
