--- a/Week-09-Bootstrap/LMS/Assignment/Submission/notes.html
+++ b/Week-09-Bootstrap/LMS/Assignment/Submission/notes.html
@@ -55,12 +55,28 @@
     </div>
     <div class="container-fluid bg-success text-white shadow-sm">
       <div class="container">
+        <div class="row align-items-center p-1">
+          <div class="col-lg-12">
+            <div class="jumbotron bg-dark m-0">
+              <h1 class="display-4">Thank you!</h1>
+              <p class="lead">
+                Thank you for viewing my Week 09 Coding Assignment... I
+                understand your time is valueable!
+              </p>
+              <hr class="my-4" />
+              <p>Click the button to view my Week 09 Assignment video.</p>
+              <a class="btn btn-info btn-lg" href="index.html" role="button"
+                >Assignment Video</a
+              >
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="container-fluid bg-success text-white shadow-sm">
       <div class="container">
         <div class="row align-items-center p-1">
-          <div class="col-md-8 d-flex justify-content-center">
+          <div class="col-lg-8 d-flex justify-content-center">
             <div class="card border-warning bg-dark" style="width: 18rem">
               <div class="card-body">
                 <h5 class="card-title">Take the time to rate my Assignment.</h5>
@@ -71,7 +87,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-lg-4">
             <form>
               <div class="form-group">
                 <label for="exampleFormControlInput1">Email address</label>
