--- a/Week-09-Bootstrap/LMS/Assignment/Submission/notes.html
+++ b/Week-09-Bootstrap/LMS/Assignment/Submission/notes.html
@@ -120,8 +120,9 @@
                 ></textarea>
               </div>
               <div class="text-center">
-
-                <button type="submit" class="btn btn-dark border-warning">Submit</button>
+                <button type="submit" class="btn btn-dark border-warning">
+                  Submit
+                </button>
               </div>
             </form>
           </div>
