--- a/Week-10-JavaScript_and_DOM_Manipulation/LMS/Assignment/Submission/AssignmentVideo.html
+++ b/Week-10-JavaScript_and_DOM_Manipulation/LMS/Assignment/Submission/AssignmentVideo.html
@@ -22,7 +22,7 @@
     <div class="container-fluid bg-info shadow-sm">
       <div class="container">
         <nav class="navbar navbar-expand-md navbar-dark bg-info">
-          <a class="navbar-brand" href="#">espinojosege</a>
+          <a class="navbar-brand" href="../../../../index.html">espinojosege</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -38,10 +38,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                <a class="nav-link" href="week09.html">Week 10</a>
+                <a class="nav-link" href="index.html">Week 10</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="index.html"
+                <a class="nav-link" href="AssignmentVideo.html"
                   >Assignment Video<span class="sr-only">(current)</span></a
                 >
               </li>
