--- a/Week-12-Project/LMS/Assignment/Submission/index.html
+++ b/Week-12-Project/LMS/Assignment/Submission/index.html
@@ -35,15 +35,17 @@
           >This will create a new form for your own moth hotel room.</small
         >
       </div>
-      <button type="button" class="btn btn-secondary" id="createRunePage">
+      <button type="button" class="btn btn-secondary" id="createRoom">
         Create
       </button>
 
-      <div id="totals"></div><br>
-        <a href="aVideo.html" class="btn bg-info m-2">Assignment Video</a><a href="index.html" class="btn bg-info m2">Project Week 12</a>
+      <div id="totals"></div>
+      <br />
+      <a href="aVideo.html" class="btn bg-info m-2">Assignment Video</a
+      ><a href="index.html" class="btn bg-info m2">Project Week 12</a>
     </div>
     <div class="container">
-      <div class="row" id="rooms"></div>
+      <div class="row row-cols-2 border" id="rooms"></div>
     </div>
 
     <!-- Optional JavaScript -->
